force-app/main/default/objects/Session_BOC__c/Session_BOC__c.object-meta.xml
<CustomObject>
    <label>Session BOC</label>
    <nameField>
        <displayFormat>SBOC-{00000}</displayFormat>
        <label>Session BOC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session BOC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>