force-app/main/default/objects/Session_BOC__c/fields/Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Behaviour__c</fullName>
    <formula>Client_BOC__r.Behaviour_of_Concern__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behaviour</label>
    <type>Text</type>
</CustomField>