force-app/main/default/objects/Session_BOC__c/fields/CBOC_Client__c.field-meta.xml
<CustomField>
    <fullName>CBOC_Client__c</fullName>
    <formula>Client_BOC__r.Client__r.PersonContact.FirstName&amp;&quot; &quot;&amp;Client_BOC__r.Client__r.PersonContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBOC Client</label>
    <type>Text</type>
</CustomField>