force-app/main/default/objects/Session_BOC__c/fields/Client_BOC__c.field-meta.xml
<CustomField>
    <fullName>Client_BOC__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client BOC</label>
    <referenceTo>Client_BOC__c</referenceTo>
    <relationshipLabel>Session BOC</relationshipLabel>
    <relationshipName>Session_BOC</relationshipName>
    <type>Lookup</type>
</CustomField>