force-app/main/default/objects/Session_BOC__c/fields/Intensity__c.field-meta.xml
<CustomField>
    <fullName>Intensity__c</fullName>
    <label>Intensity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>