force-app/main/default/objects/Session_BOC__c/fields/Occurrences__c.field-meta.xml
<CustomField>
    <fullName>Occurrences__c</fullName>
    <label>Occurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>