force-app/main/default/objects/Session_BOC__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Session BOC</relationshipLabel>
    <relationshipName>Session_BOC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>