force-app/main/default/objects/Session_BOC__c/fields/Session_Client__c.field-meta.xml
<CustomField>
    <fullName>Session_Client__c</fullName>
    <formula>Session__r.Client__r.PersonContact.FirstName&amp;&quot; &quot;&amp; Session__r.Client__r.PersonContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Client</label>
    <type>Text</type>
</CustomField>