force-app/main/default/objects/Session_BOC__c/validationRules/Ref_Integrity_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Ref_Integrity_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR( CBOC_Client__c ==NULL,
 Session_Client__c ==NULL,
CBOC_Client__c!=Session_Client__c)</errorConditionFormula>
    <errorMessage>A Referential Integrity error occurred.
The Session client and and the BOC client must match. 
 
Action: Please contact your LFL administrator.</errorMessage>
</ValidationRule>