force-app/main/default/objects/Session_BOC__c/validationRules/Time_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!(ISBLANK(Time__c)),!REGEX(Time__c,&apos;^(?:[01][0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
    <errorDisplayField>Time__c</errorDisplayField>
    <errorMessage>Time must be in 24 Hour HH:MI format. 
Examples: 09:30, 21:30</errorMessage>
</ValidationRule>