force-app/main/default/objects/Session_BOC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CBOC_Client__c</columns>
    <columns>Client_BOC__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Duration_Mins__c</columns>
    <columns>Intensity__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Occurrences__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Session__c</columns>
    <columns>Session_Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>